--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -101,6 +101,7 @@ html.lenis body {
 }
 
 .maintext {
+  background-image: linear-gradient(90deg, rgb(238, 0, 255), rgb(255, 0, 17));
   color: transparent;
   background-clip: text;
 }
