--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,48 @@ html.lenis body {
   color: transparent;
   background-clip: text;
 }
+
+.scroll {
+  height: fit;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  white-space: nowrap;
+  mask-image: linear-gradient(from left, transparent, black, transparent);
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black,
+    transparent
+  );
+}
+.container {
+  height: 100%;
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-evenly;
+  animation-duration: 10s;
+  animation-name: marqueeAnimation;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.container2 {
+  height: 100%;
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-evenly;
+  animation-duration: 10s;
+  animation-name: marqueeAnimation;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: reverse;
+}
+
+@keyframes marqueeAnimation {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100%));
+  }
+}
