--- a/app/globals.css
+++ b/app/globals.css
@@ -187,5 +187,14 @@ html.lenis body {
 
 .boll {
   background-color: rgb(255, 255, 255);
-  mix-blend-mode:difference;
+  mix-blend-mode: difference;
+}
+
+::selection {
+  background: rgba(255, 4, 242, 0.905);
+  color: white;
+}
+.FirstPage *::selection {
+  background: rgba(0, 134, 244, 0.905);
+  color: white;
 }
