--- a/app/globals.css
+++ b/app/globals.css
@@ -159,9 +159,9 @@ html.lenis body {
   stroke-dasharray: 1500;
   stroke-dashoffset: 1500;
   animation-name: drawAndFill;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
   animation-timing-function: ease-in-out;
-  animation-delay: 3s;
+  animation-delay: .5s;
   animation-fill-mode: forwards;
 }
 
@@ -198,4 +198,30 @@ html.lenis body {
 .FirstPage *::selection {
   background: rgba(0, 134, 244, 0.905);
   color: white;
+}
+
+
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1f1f1f;
+  border-radius: 0px;
+  cursor: pointer;
+  transition: all;
+  transition-duration: 600ms;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4e4e4e;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
