Portfolio version 2.0 -Update dependencies, -enhance UI components, -and improve animations across the application.

--- a/app/globals.css
+++ b/app/globals.css
@@ -188,7 +188,7 @@ html.lenis body {
 
 .boll {
   background-color: rgb(255, 255, 255);
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
 }
 
 ::selection {
@@ -224,4 +224,22 @@ html.lenis body {
 
 ::-webkit-scrollbar-corner {
   background: transparent;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap");
+
+.variable-proximity {
+  font-family: "Roboto Flex", sans-serif;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
